--- a/Examples/LTE_NanosemiDPD_EVM_ACP_UL/LTE_NanosemiDPD_EVM_ACP_UL.csproj
+++ b/Examples/LTE_NanosemiDPD_EVM_ACP_UL/LTE_NanosemiDPD_EVM_ACP_UL.csproj
@@ -4,16 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7FDB7CDB-4281-4B0D-A407-A6D4C63FCD36}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NanosemiDPD</RootNamespace>
-    <AssemblyName>NanosemiDPD</AssemblyName>
+    <ProjectGuid>{C95B388B-A9DD-4019-B4A1-64BC0188083D}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>LTE_NanosemiDPD_EVM_ACP_UL</RootNamespace>
+    <AssemblyName>LTE_NanosemiDPD_EVM_ACP_UL</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>x64</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,6 +23,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -30,30 +31,14 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
-    <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\x64\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <DebugType>full</DebugType>
-    <PlatformTarget>x64</PlatformTarget>
-    <LangVersion>7.3</LangVersion>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
-    <OutputPath>bin\x64\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <Optimize>true</Optimize>
-    <DebugType>pdbonly</DebugType>
-    <PlatformTarget>x64</PlatformTarget>
-    <LangVersion>7.3</LangVersion>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  <PropertyGroup>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="NationalInstruments.Common, Version=19.0.40.49152, Culture=neutral, PublicKeyToken=dc6ad606294fc298, processorArchitecture=MSIL" />
     <Reference Include="NationalInstruments.ModularInstruments.NIRfsg.Fx45, Version=19.6.0.49152, Culture=neutral, PublicKeyToken=4febd62461bf11a4, processorArchitecture=MSIL" />
-    <Reference Include="NationalInstruments.ModularInstruments.NIRfsgPlayback.Fx40, Version=20.0.0.16384, Culture=neutral, PublicKeyToken=dc6ad606294fc298, processorArchitecture=MSIL" />
+    <Reference Include="NationalInstruments.RFmx.InstrMX.Fx40, Version=20.0.0.16384, Culture=neutral, PublicKeyToken=dc6ad606294fc298, processorArchitecture=MSIL" />
+    <Reference Include="NationalInstruments.RFmx.LteMX.Fx40, Version=20.0.0.16384, Culture=neutral, PublicKeyToken=dc6ad606294fc298, processorArchitecture=MSIL" />
     <Reference Include="NationalInstruments.RFmx.SpecAnMX.Fx40, Version=20.0.0.16384, Culture=neutral, PublicKeyToken=dc6ad606294fc298, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -65,16 +50,35 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="NanosemiDPD.cs" />
-    <Compile Include="nstdpd.cs" />
+    <Compile Include="LTE_NanosemiDPD_EVM_ACP_UL.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Common\Common.csproj">
+    <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Source\Common\Common.csproj">
       <Project>{8e7d5092-b685-4ad3-9da3-7c53e56f0f32}</Project>
       <Name>Common</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\SG\SG.csproj">
+    <ProjectReference Include="..\..\Source\Methods\NanosemiDPD\NanosemiDPD.csproj">
+      <Project>{7fdb7cdb-4281-4b0d-a407-a6d4c63fcd36}</Project>
+      <Name>NanosemiDPD</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Source\SA\RFmx Instr\RFmxInstr.csproj">
+      <Project>{ab49d5a9-9585-445a-ae8a-e4dd2b8956aa}</Project>
+      <Name>RFmxInstr</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Source\SA\RFmx LTE\RFmxLTE.csproj">
+      <Project>{1eb6f1ae-2eea-4dc8-8cdb-09b5fadf2236}</Project>
+      <Name>RFmxLTE</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Source\SA\RFmx SpecAn\RFmxSpecAn.csproj">
+      <Project>{3d1bc0f6-273c-4a44-82f6-3bb933862ffb}</Project>
+      <Name>RFmxSpecAn</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Source\SG\SG.csproj">
       <Project>{89abcac5-cedb-4535-bd58-e205a97834d9}</Project>
       <Name>SG</Name>
     </ProjectReference>
