Resolve review comments

--- a/Source/PowerMeter/PowerMeter.csproj
+++ b/Source/PowerMeter/PowerMeter.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{208D1990-4992-458B-8DFC-6E4375010F9B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RSPowerMeter</RootNamespace>
-    <AssemblyName>RSPowerMeter</AssemblyName>
+    <RootNamespace>568x</RootNamespace>
+    <AssemblyName>568x</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -26,7 +26,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>..\..\Builds\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
