Added SolutionInfo.cs file to the references per https://github.com/NISystemsEngineering/rfic-reference-design-libraries-csharp/blob/master/CONTRIBUTING.md#versioning

--- a/Source/PowerMeter/PowerMeter.csproj
+++ b/Source/PowerMeter/PowerMeter.csproj
@@ -35,6 +35,9 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SolutionInfo.cs">
+      <Link>Properties\SolutionInfo.cs</Link>
+    </Compile>
     <Compile Include="ni568x.cs" />
     <Compile Include="PowerMeter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
